@@ -1,0 +1,4 @@
+(fn flatten (x)
+  (? (cons? x)
+     (apply #'+ (@ #'flatten x))
+     x))
