@@ -1,4 +1,5 @@
 Changes relative to tre-0.20:
+  * CONCAT-STRINGTREE is now FLATTEN.
   * QUASIQUOTE-SPLICE turns JavaScript objects into keyword/
     value lists.
   * New MAKE-JS-PROJECT and MAKE-PHP-PROJECTS compile with
